# rexpi

./: .gitignore  LICENSE  README.md  README_short.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  python-app.yml
docs/: JS23preprint.bib  Ja25preprint.bib
examples/: ex01_basicrun_mp.ipynb  ex0_basicruns.ipynb  ex1_adaptivesetup.ipynb  ex1_approxandphaseerror.ipynb  ex2_polesandnodes.ipynb  ex3_Lawson.ipynb  ex3_evaluater.ipynb  ex4_matrixexponential.ipynb  ex4_symmetry.ipynb  ex5_matrixexponential.ipynb  ex5_rationalinterpolation.ipynb
src/rexpi/: AAAlawson.py  __init__.py  barycentricfcts.py  brib.py  cheb.py  errorestimates.py  expimv.py  pade.py  unitarybestapprox.py
tests/: test_run.py
