[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rexpi"
version = "0.0.2"
authors = [
  { name="Tobias Jawecki", email="tobias.jawecki@gmail.com" },
]
description = "A python package for computing rational approximations to the unitary exponential function with a focus on unitary best approximations."
readme = "README_short.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["rational approximation", "best approximation", "unitary", "exponential function"]

[project.urls]
Homepage = "https://github.com/newbisi/rexpi"
Issues = "https://github.com/newbisi/rexpi/issues"
